Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -596,3 +596,47 @@ $ echo $MAIL
 Другое распространенное значение этой переменной - `/var/spool/mail/$USER`.
 
 
+`MAILCHECK`  
+Эта переменная хранит числовое значение, которое указывает в секундах частоту, с которой Bash проверяет наличие новой почты:
+
+```console
+$ echo $MAILCHECK
+60
+```
+
+`PATH`  
+Эта переменная среды хранит список каталогов, в которых Bash ищет исполняемые файлы, когда ему предлагается запустить любую программу. В нашем примере машины эта переменная устанавливается через общесистемный файл `/etc/profile`:
+
+```console
+if [ "`id -u`" -eq 0 ]; then
+  PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+else
+  PATH="/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games"
+fi
+export PATH
+```
+
+С помощью оператора `if` проверяется личность пользователя, и - в зависимости от результата теста (`root` или иной) - мы получим тот или иной `PATH`. Наконец, выбранный `PATH` распространяется при помощи `export`. Обратите внимание на две вещи относительно значения `PATH`: 
+
+* Имена каталогов записываются с использованием абсолютных путей. 
+* Двоеточие используется как разделитель. 
+
+Если мы хотим включить папку `/usr/local/sbin` в `PATH` для обычных пользователей, мы изменим строку так, чтобы она выглядела следующим образом:
+
+```console
+(...)
+else
+  PATH="/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games:/usr/local/sbin"
+fi
+export PATH
+```
+
+Теперь мы можем увидеть, как изменяется значение переменной, когда мы авторизуемся как обычный пользователь:
+```console
+# su - carol
+$ echo $PATH
+/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games:/usr/local/sbin
+```
+
+>Мы также могли бы добавить `/usr/local/sbin` в пользовательский `PATH` в командной строке, набрав либо `PATH=/usr/local/sbin:$PATH`, либо `PATH=$PATH:/usr/local/sbin` - первое создание `/usr/local/sbin` - первый каталог, в котором выполняется поиск исполняемых файлов; последний делает его последним.
+
