Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -640,3 +640,41 @@ $ echo $PATH
 
 >Мы также могли бы добавить `/usr/local/sbin` в пользовательский `PATH` в командной строке, набрав либо `PATH=/usr/local/sbin:$PATH`, либо `PATH=$PATH:/usr/local/sbin` - первое создание `/usr/local/sbin` - первый каталог, в котором выполняется поиск исполняемых файлов; последний делает его последним.
 
+`PS1`  
+В этой переменной хранится значение приглашения Bash. В следующем фрагменте кода (также из `/etc/profile`) оператор `if` проверяет личность пользователя и соответственно выдает ему очень дискретную подсказку (`#` для `root` или `$` для обычных пользователей):
+```console
+if [ "`id -u`" -eq 0 ]; then
+  PS1='# '
+else
+  PS1='$ '
+fi
+```
+
+Идентификатор `root` равен 0. Станьте пользователем `root` и проверьте его самостоятельно с помощью `id -u`.
+
+Другие переменные подсказки включают: 
+
+`PS2`  
+Обычно устанавливается на `>` и используется как подсказка для продолжения для длинных многострочных команд. 
+
+`PS3`  
+Используется как подсказка для команды выбора. 
+
+`PS4`  
+Обычно устанавливается на `+` и используется для отладки. 
+
+`SHELL`  
+Эта переменная хранит абсолютный путь к текущей оболочке:
+
+```console
+$ echo $SHELL
+/bin/bash
+```
+
+`USER`  
+Здесь хранится имя текущего пользователя:
+
+```console
+$ echo $USER
+carol
+```
