Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -1,10 +1,10 @@
-# 105.2 Урок 1
+# 105.1 Урок 2
 
 | **Сертификат:** | LPIC-1                                      |
 |:----------------|:--------------------------------------------|
 | **Версия:**     | 5.0                                         |
 | **Тема:**       | 105 Оболочки и сценарии оболочки            |                           
-| **Цель:**       | 105.2 Настройка и использование окружения оболочки |
+| **Цель:**       | 105.1 Настройка и использование окружения оболочки |
 | **Урок:**       | 2 из 3                                      |
 
 
@@ -678,3 +678,26 @@ $ echo $SHELL
 $ echo $USER
 carol
 ```
+
+
+# Упражнения для закрепления
+
+
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+
+## Ответы на упражнения для размышления
