Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -682,8 +682,27 @@ carol
 
 # Упражнения для закрепления
 
+1. Обратите внимание на присвоение переменных в столбце «Команда(ы)» и укажите, является ли результирующая переменная «локальной» или «глобальной»:
 
+| Команда(ы)                       | Локальная | Глобпльная |
+|:---------------------------------|:----------|:-----------|
+| `debian=mother`                  |           |            |
+| `ubuntu=deb-based`               |           |            |
+| `mint=ubuntu-based; export mint` |           |            |
+| `export suse=rpm-based`          |           |            |
+| `zorin=ubuntu-based`             |           |            |
 
+2. Изучите «Команда» и «Вывод» и объясните значение: 
+
+| Команда(ы)          | Вывод                       | Значение   |
+|:--------------------|:----------------------------|:-----------|
+| `echo $HISTCONTROL` | `ignoreboth`                |            |   
+| `echo ~`            | `/home/carol`               |            |
+| `echo $DISPLAY`     | `reptilium:0:2`             |            |
+| `echo $MAILCHECK`   | `60` |                      |            |
+| `echo $HISTFILE`    | `/home/carol/.bash_history` |            |
+
+3. 
 
 ## Упражнения на размышление
 
