Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -702,7 +702,16 @@ carol
 | `echo $MAILCHECK`   | `60` |                      |            |
 | `echo $HISTFILE`    | `/home/carol/.bash_history` |            |
 
-3. 
+3. Переменные задаются неправильно в столбце «Неправильная команда». Предоставьте недостающую информацию в разделах «Правильная команда» и «Ссылка на переменную», чтобы мы получили «Ожидаемый результат»:
+
+| Команда(ы)                 | Правильная команда | Ссылка на переменную | Ожидаемый результат |
+|:---------------------------|:-------------------|:---------------------|:--------------------|
+| `lizard =chameleon`        |                    |                      | `chameleon`         |
+| `cool lizard=chameleon`    |                    |                      | `chameleon`         |
+| `lizard=cha|me|leon`       |                    |                      | `cha|me|leon`       |
+| `lizard=/** chameleon **/` |                    |                      | `/** chamelon **/`  |
+| `win_path=C:\path\to\dir\` |                    |                      | `C:\path\to\dir\`   |
+
 
 ## Упражнения на размышление
 
