Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -712,6 +712,28 @@ carol
 | `lizard=/** chameleon **/` |                    |                      | `/** chamelon **/`  |
 | `win_path=C:\path\to\dir\` |                    |                      | `C:\path\to\dir\`   |
 
+4. Обдумайте цель и напишите соответствующую команду:
+
+| Цель                             | Команда                            |
+|:---------------------------------|:-----------------------------------|
+| Установите язык текущей оболочки на испанский UTF-8 (`es_ES.UTF-8`). ||           
+| Вывести имя текущего рабочего каталога.|                              | 
+| Ссылка на переменную среды, в которой хранится информация о ssh-соединениях. ||
+| становите PATH, чтобы включить / home / carol / scripts в качестве последнего каталога для поиска исполняемых файлов. ||
+| Установите значение `my_path` равным `PATH`. |                        |
+| Установите значение `my_path` равным `PATH`. |                        |
+
+5. Создайте локальную переменную с именем млекопитающее и присвойте ей значение `gnu`:
+6. Используя подстановку переменных, создайте другую локальную переменную с именем `var_sub` с соответствующим значением, чтобы при обращении через `echo $var_sub` мы получали: `The value of mammal is gnu`:
+7. Превратите `mammal` в переменную среды:
+8. Найдите ее с помощью `set` и `grep`:
+9. Найдите ее с помощью `env` и `grep`:
+10. Создайте двумя последовательными командами переменную среды с именем `BIRD`, значение которой равно `penguin`:
+11. Создайте с помощью одной команды переменную окружения с именем `NEW_BIRD`, значение которой - `yellow-eyed penguin`:
+12. Предполагая, что вы `user2`, создайте папку с именем `bin` в своем домашнем каталоге:
+13. Введите команду, чтобы добавить папку `~/bin` в ваш `PATH`, чтобы это был первый каталог, в котором `bash` ищет двоичные файлы:
+14. Чтобы гарантировать, что значение `PATH` остается неизменным при перезагрузке, какой фрагмент кода - в форме оператора `if` - вы бы поместили в `~/.profile`?
+
 
 ## Упражнения на размышление
 
