Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -737,6 +737,30 @@ carol
 
 ## Упражнения на размышление
 
+1. `let`: больше, чем вычисление арифметических выражений: 
+* Выполните поиск на странице руководства или в Интернете для `let` и его последствий при установке переменных и создайте новую локальную переменную с именем `my_val`, значение которой равно `10` - в результате сложения 5 и 5: 
+* Теперь создайте другую переменную с именем `your_val`, значение которой равно `5` - в результате деления значения `my_val` на 2: 
+
+2. Результат команды в переменной? Конечно, это возможно; это называется *подстановкой команд*. Изучите это и изучите следующую функцию с именем `music_info`:
+```console
+music_info(){
+latest_music=`ls -l1t ~/Music | head -n 6`
+echo -e "Your latest 5 music files:\n$latest_music"
+}
+```
+Результат выполнения команды `ls -l1t ~/Music | head -n 6` становится значением переменной `latest_music`. Затем переменная `latest_music` упоминается в команде `echo` (которая выводит общее количество байтов, занятых папкой `Music` и пятью последними музыкальными файлами, хранящимися в папке `Music` - по одному в строке). 
+
+Что из следующего является допустимым синонимом для
+```console
+latest_music=`ls -l1t ~/Music | head -n 6`
+```
+
+Вариант А:
+```console
+latest_music=$(ls -l1t ~/Music| head -n 6)
+```
+
+Вариант Б:
 
 
 
