Update 105.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -761,12 +761,73 @@ latest_music=$(ls -l1t ~/Music| head -n 6)
 ```
 
 Вариант Б:
+```console
+latest_music="(ls -l1t ~/Music| head -n 6)"
+```
 
+Вариант В:
+```console
+latest_music=((ls -l1t ~/Music| head -n 6))
+```
 
 
 ## Резюме
 
+На этом уроке мы узнали: 
+* Переменные - очень важная часть среды оболочки, поскольку они используются самой оболочкой, а также другими программами. 
+* Как присваивать переменные и ссылаться на них. 
+* Различия между *локальными* и *глобальными* (или *окружающими*) переменными. 
+* Как сделать переменные доступными *только для чтения*. 
+* Как превратить локальную переменную в переменную среды с помощью команды `export`. 
+* Как перечислить все переменные среды. 
+* Как запустить программу в измененной среде. 
+* Как сделать переменные постоянными с помощью скриптов запуска. 
+* Некоторые общие переменные среды: `DISPLAY`, `HISTCONTROL`, `HISTSIZE`, `HISTFILESIZE`, `HISTFILE`, `HOME`, `HOSTNAME`, `HOSTTYPE`, `LANG`, `LD_LIBRARY_PATH`, `MAIL`, `MAILCHECK`, `PATH`, `PS1` (и другие переменные приглашения), `SHELL` и `USER`. Значение тильды (`~`). 
+* Самые основы операторов `if`. 
 
+Команды, используемые в этом уроке: 
+
+`echo`  
+Ссылка на переменную. 
+
+`ls`  
+Список содержимого каталога. 
+
+`readonly`  
+Сделайте переменные неизменными. Список всех переменных, доступных только для чтения, в текущем сеансе. 
+
+`set`  
+Список всех переменных и функций в текущем сеансе. 
+
+`grep`  
+Распечатайте строки, соответствующие шаблону. 
+
+`bash`  
+Запустить новую оболочку 
+
+`unset`  
+Сбросить переменные. 
+
+`export`  
+Превратите локальную переменную в переменную среды. Перечислить переменные среды. 
+
+`env`  
+Перечислить переменные среды. Запустите программу в измененной среде. 
+
+`printenv`  
+Перечислить переменные среды. Ссылка на переменную. 
+
+`chmod`  
+Измените биты режима файла, например сделайте его исполняемым. 
+
+`history`  
+Перечислить предыдущие команды. 
+
+`su`  
+Измените идентификатор пользователя или станьте суперпользователем. 
+
+`id`  
+Распечатать идентификатор пользователя.
 
 
 ## Ответы на упражнения для закрепления
