--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 2.md
@@ -832,7 +832,90 @@ latest_music=((ls -l1t ~/Music| head -n 6))
 
 ## Ответы на упражнения для закрепления
 
+1. Обратите внимание на присвоение переменных в столбце «Команда(ы)» и укажите, является ли результирующая переменная «локальной» или «глобальной»:
 
+| Команда(ы)                       | Локальная | Глобпльная |
+|:---------------------------------|:----------|:-----------|
+| `debian=mother`                  |           |            |
+| `ubuntu=deb-based`               |           |            |
+| `mint=ubuntu-based; export mint` |           |            |
+| `export suse=rpm-based`          |           |            |
+| `zorin=ubuntu-based`             |           |            |
+
+2. Изучите «Команда» и «Вывод» и объясните значение: 
+
+| Команда(ы)          | Вывод                       | Значение   |
+|:--------------------|:----------------------------|:-----------|
+| `echo $HISTCONTROL` | `ignoreboth`                |            |   
+| `echo ~`            | `/home/carol`               |            |
+| `echo $DISPLAY`     | `reptilium:0:2`             |            |
+| `echo $MAILCHECK`   | `60` |                      |            |
+| `echo $HISTFILE`    | `/home/carol/.bash_history` |            |
+
+3. Переменные задаются неправильно в столбце «Неправильная команда». Предоставьте недостающую информацию в разделах «Правильная команда» и «Ссылка на переменную», чтобы мы получили «Ожидаемый результат»:
+
+| Команда(ы)                 | Правильная команда | Ссылка на переменную | Ожидаемый результат |
+|:---------------------------|:-------------------|:---------------------|:--------------------|
+| `lizard =chameleon`        |                    |                      | `chameleon`         |
+| `cool lizard=chameleon`    |                    |                      | `chameleon`         |
+| `lizard=cha|me|leon`       |                    |                      | `cha|me|leon`       |
+| `lizard=/** chameleon **/` |                    |                      | `/** chamelon **/`  |
+| `win_path=C:\path\to\dir\` |                    |                      | `C:\path\to\dir\`   |
+
+4. Обдумайте цель и напишите соответствующую команду:
+
+| Цель                             | Команда                            |
+|:---------------------------------|:-----------------------------------|
+| Установите язык текущей оболочки на испанский UTF-8 (`es_ES.UTF-8`). ||           
+| Вывести имя текущего рабочего каталога.|                              | 
+| Ссылка на переменную среды, в которой хранится информация о ssh-соединениях. ||
+| становите PATH, чтобы включить / home / carol / scripts в качестве последнего каталога для поиска исполняемых файлов. ||
+| Установите значение `my_path` равным `PATH`. |                        |
+| Установите значение `my_path` равным `PATH`. |                        |
+
+5. Создайте локальную переменную с именем млекопитающее и присвойте ей значение `gnu`:
+6. Используя подстановку переменных, создайте другую локальную переменную с именем `var_sub` с соответствующим значением, чтобы при обращении через `echo $var_sub` мы получали: `The value of mammal is gnu`:
+7. Превратите `mammal` в переменную среды:
+8. Найдите ее с помощью `set` и `grep`:
+9. Найдите ее с помощью `env` и `grep`:
+10. Создайте двумя последовательными командами переменную среды с именем `BIRD`, значение которой равно `penguin`:
+11. Создайте с помощью одной команды переменную окружения с именем `NEW_BIRD`, значение которой - `yellow-eyed penguin`:
+12. Предполагая, что вы `user2`, создайте папку с именем `bin` в своем домашнем каталоге:
+13. Введите команду, чтобы добавить папку `~/bin` в ваш `PATH`, чтобы это был первый каталог, в котором `bash` ищет двоичные файлы:
+14. Чтобы гарантировать, что значение `PATH` остается неизменным при перезагрузке, какой фрагмент кода - в форме оператора `if` - вы бы поместили в `~/.profile`?
 
 
 ## Ответы на упражнения для размышления
+
+1. `let`: больше, чем вычисление арифметических выражений: 
+* Выполните поиск на странице руководства или в Интернете для `let` и его последствий при установке переменных и создайте новую локальную переменную с именем `my_val`, значение которой равно `10` - в результате сложения 5 и 5: 
+* Теперь создайте другую переменную с именем `your_val`, значение которой равно `5` - в результате деления значения `my_val` на 2: 
+
+2. Результат команды в переменной? Конечно, это возможно; это называется *подстановкой команд*. Изучите это и изучите следующую функцию с именем `music_info`:
+```console
+music_info(){
+latest_music=`ls -l1t ~/Music | head -n 6`
+echo -e "Your latest 5 music files:\n$latest_music"
+}
+```
+Результат выполнения команды `ls -l1t ~/Music | head -n 6` становится значением переменной `latest_music`. Затем переменная `latest_music` упоминается в команде `echo` (которая выводит общее количество байтов, занятых папкой `Music` и пятью последними музыкальными файлами, хранящимися в папке `Music` - по одному в строке). 
+
+Что из следующего является допустимым синонимом для
+```console
+latest_music=`ls -l1t ~/Music | head -n 6`
+```
+
+Вариант А:
+```console
+latest_music=$(ls -l1t ~/Music| head -n 6)
+```
+
+Вариант Б:
+```console
+latest_music="(ls -l1t ~/Music| head -n 6)"
+```
+
+Вариант В:
+```console
+latest_music=((ls -l1t ~/Music| head -n 6))
+```
